02-independent-practice/terraform-webapp-demo/modules/networking/main.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support = true

  tags = {
    Name = "${var.project}-${var.environment}-vpc"
    Environment = var.environment
  }
}

# Public Subnet
resource "aws_subnet" "public" {
  for_each = toset(var.availability_zones)

  vpc_id = aws_vpc.this.id
  cidr_block = var.public_subnet_cidrs[index(var.availability_zones, each.key)]
  availability_zone = each.key
  map_customer_owned_ip_on_launch = true

  tags = {
    Name = "${var.project}-${var.environment}-public-${each-key}"
  }
}


# Internet Gateway
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "${var.project}-${var.environment}-igw"
    Environment = var.environment
  }
}


# Route Table
resource "aws_route_table" "this" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }
  
  tags = {
    Name        = "${var.project}-${var.environment}-public-rt"
    Environment = var.environment
  }
}

# Route Table Association
resource "aws_route_table_association" "public" {
  for_each = aws_subnet.public

  subnet_id = each.value.id
  route_table_id = aws_route_table.this.id
}


# Security Group - ALB
resource "aws_security_group" "alb" {
  name = "${var.project}-${var.environment}-alb-sg"
  vpc_id = aws_vpc.this.id


  ingress {
    description = "HTTP from internet"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all Outbound"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.project}-${var.environment}-alb-sg"
    Environment = var.environment
  }
}


resource "aws_security_group" "ec2" {
  name = "${var.project}-${var.environment}-ec2-sg"
  vpc_id = aws_vpc.this.id

  ingress {
    description = "HTTP from ALB only"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    description = "Allow all outbound"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.project}-${var.environment}-ec2-sg"
    Environment = var.environment
  }
}
